--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 		<link rel="stylesheet" href="style.css" />
+		<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+		<script src="script.js" defer></script>
+
 		<title>Random Password Generator</title>
 	</head>
 	<body>
@@ -15,19 +18,14 @@
 			<h2>Password Generator</h2>
 			<div class="wrapper">
 				<div class="input-box">
-					<input
-						type="text"
-						name="password"
-						id="password"
-						value="e7_5y^BmArJ10*WQ0Dx-y@~5s"
-						disabled />
+					<input type="text" name="password" id="password" disabled />
 					<span class="material-symbols-rounded">copy_all</span>
 				</div>
 				<div class="pass-indicator"></div>
 				<div class="pass-length">
 					<div class="details">
 						<label class="title">Password Length</label>
-						<span class="value">16</span>
+						<span class="value"></span>
 					</div>
 					<input
 						type="range"
@@ -44,7 +42,8 @@
 							<input
 								type="checkbox"
 								name="lowercase"
-								id="lowercase" />
+								id="lowercase"
+								checked />
 							<label for="lowercase">Lowercase (a-z)</label>
 						</li>
 
@@ -96,6 +95,5 @@
 				</button>
 			</div>
 		</div>
-		<script src="script.js"></script>
 	</body>
 </html>
