--- a/Dark-Theme-Switcher/index.html
+++ b/Dark-Theme-Switcher/index.html
@@ -8,5 +8,26 @@
 		<script src="script.js" defer></script>
 		<link rel="stylesheet" href="style.css" />
 	</head>
-	<body></body>
+	<body data-theme="light">
+		<section>
+			<div class="container">
+				<h1>Dark Theme Switcher</h1>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					Quasi est mollitia atque repellat aperiam placeat quam
+					aspernatur consectetur rerum cupiditate error pariatur
+					laudantium, quo dicta iusto et sapiente cum ipsam eius
+					officiis, perspiciatis libero veniam, laborum laboriosam.
+					Inventore molestiae ut eius commodi tempore qui dolores,
+					ducimus, quis corporis, impedit facere.
+				</p>
+				<button>Hello!</button>
+			</div>
+		</section>
+
+		<div class="theme-switcher">
+			<input type="checkbox" name="switcher" id="switcher" />
+			<label for="switcher">Switch</label>
+		</div>
+	</body>
 </html>
