--- a/Dark-Theme-Switcher/index.html
+++ b/Dark-Theme-Switcher/index.html
@@ -8,7 +8,7 @@
 		<script src="script.js" defer></script>
 		<link rel="stylesheet" href="style.css" />
 	</head>
-	<body data-theme="light">
+	<body data-theme="">
 		<section>
 			<div class="container">
 				<h1>Dark Theme Switcher</h1>
