working on html

--- a/numbers-api/index.html
+++ b/numbers-api/index.html
@@ -8,5 +8,21 @@
 		<script src="script.js" defer></script>
 		<title>Numbers API - Get Interesting Facts about Numbers</title>
 	</head>
-	<body></body>
+	<body>
+		<section>
+			<div class="container">
+				<form>
+					<input
+						type="number"
+						name="number"
+						id="number"
+						placeholder="Enter A Number" />
+					<button type="submit">Submit</button>
+				</form>
+				<div class="numberFact">
+					Give a Number and I will tell you a Interesting fact
+				</div>
+			</div>
+		</section>
+	</body>
 </html>
