numbers api project complete

--- a/numbers-api/index.html
+++ b/numbers-api/index.html
@@ -20,7 +20,7 @@
 					<button type="submit">Submit</button>
 				</form>
 				<div class="numberFact">
-					Give a Number and I will tell you a Interesting fact
+					Give a Number and I will tell you a Interesting fact 😎
 				</div>
 			</div>
 		</section>
