--- a/Countdown-Timer/index.html
+++ b/Countdown-Timer/index.html
@@ -8,5 +8,11 @@
 		<script src="script.js" defer></script>
 		<title>Countdown Timer</title>
 	</head>
-	<body></body>
+	<body>
+		<section>
+			<div class="container">
+				<h1></h1>
+			</div>
+		</section>
+	</body>
 </html>
