--- a/Key-Code-Gen/index.html
+++ b/Key-Code-Gen/index.html
@@ -10,7 +10,18 @@
 	</head>
 	<body>
 		<section>
-			<div class="container"></div>
+			<div class="container">
+				<div class="key">
+					<h1>Pressed Key</h1>
+					<h2>S</h2>
+				</div>
+				<div class="arrow"><img src="arrow.svg" alt="arrow" /></div>
+				<div class="keyCode">
+					<h1>Key Code</h1>
+					<h2>83</h2>
+					<p>Click to Copy</p>
+				</div>
+			</div>
 		</section>
 	</body>
 </html>
