--- a/Key-Code-Gen/index.html
+++ b/Key-Code-Gen/index.html
@@ -13,15 +13,18 @@
 			<div class="container">
 				<div class="key">
 					<h1>Pressed Key</h1>
-					<h2>S</h2>
+					<h2></h2>
 				</div>
 				<div class="arrow"><img src="arrow.svg" alt="arrow" /></div>
 				<div class="keyCode">
 					<h1>Key Code</h1>
-					<h2>83</h2>
+					<h2></h2>
 					<p>Click to Copy</p>
 				</div>
 			</div>
 		</section>
+		<div class="overlay">
+			<h1>Press any Key to Start</h1>
+		</div>
 	</body>
 </html>
