--- a/Read_More_Button/index.html
+++ b/Read_More_Button/index.html
@@ -16,7 +16,9 @@
 				Assumenda, officiis tempore rem facilis natus pariatur incidunt
 				mollitia dolore quam fugit quod qui repellendus amet, quas
 				numquam placeat tenetur, quaerat dolor perferendis saepe
-				quibusdam. Enim reiciendis consequuntur nulla.
+				quibusdam. Enim reiciendis consequuntur nulla<span class="dots">
+					... ... ...</span
+				>
 				<span class="moreText">
 					Molestiae amet sequi aut aliquam nulla incidunt, nostrum
 					sint delectus velit laboriosam, voluptates a debitis iure
