--- a/Photo-Gallery/index.html
+++ b/Photo-Gallery/index.html
@@ -5,10 +5,43 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
-		<script src="index.js"></script>
-		<title>Photo Gallery</title>
+		<script src="index.js" defer></script>
+
+		<!-- ICON PACK -->
+		<script
+			type="module"
+			src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+			defer></script>
+		<script
+			nomodule
+			src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+			defer></script>
+		<title>Photo Gallery APP</title>
 	</head>
 	<body>
-		<section></section>
+		<section>
+			<div class="container">
+				<div class="header">
+					<h1 class="logo">Photo Gallery</h1>
+					<form>
+						<input
+							type="text"
+							name="search"
+							id="search"
+							placeholder="Search Image" />
+						<ion-icon name="search-outline"></ion-icon>
+					</form>
+				</div>
+
+				<div class="gallery">
+					<div class="item">
+						<a href="#">
+							<img src="" alt="" />
+							<h3>Photographer Name</h3>
+						</a>
+					</div>
+				</div>
+			</div>
+		</section>
 	</body>
 </html>
